force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Project__c/sf_devops__Project__c.object-meta.xml
<CustomObject>
    <description>A project helps you organize the work items and pipelines used for building your application.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>