force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Project__c/fields/sf_devops__Description__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Description__c</fullName>
    <description>A description of the project.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>