force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Project__c/fields/sf_devops__Package_Directories__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Package_Directories__c</fullName>
    <description>Stores the filepath(s) of the sfdx-project.json&apos;s package directories</description>
    <label>Sfdx-project.json&apos;s Package Directories</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>