force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Project__c/validationRules/sf_devops__No_Platform_Repository_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__No_Platform_Repository_Change</fullName>
    <active>true</active>
    <description>Enforces that Platform_Repository__c cannot be changed.</description>
    <errorConditionFormula>ISCHANGED(  sf_devops__Platform_Repository__c  )</errorConditionFormula>
    <errorMessage>Platform_Repository__c cannot be modified.</errorMessage>
</ValidationRule>