force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Project__c/validationRules/sf_devops__Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Unique_Name</fullName>
    <active>true</active>
    <description>Enforces that all projects have a unique name</description>
    <errorConditionFormula>AND(
  OR(
    ISNEW(),
    ISCHANGED( Name )
  ),
  NOT(
    ISBLANK (
      VLOOKUP( $ObjectType.sf_devops__Project__c.Fields.Name, 
               $ObjectType.sf_devops__Project__c.Fields.Name,
               Name )
     )
  )
)</errorConditionFormula>
    <errorMessage>Projects require a unique name.</errorMessage>
</ValidationRule>